assets/css/styles.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;

  --main-color: #efcb92;
  --header: #46443d;
  --button-confirm: #5d7d55;
  --button-confirm-hover: #789770;
  --button-delete: #d25638;
  --card-background: #f5e1c4;
}

body {
  background-color: var(--main-color);
}

.main-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background-color: var(--main-color);
}

.header {
  padding: 40px;
  border-bottom: 1px solid black;
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: var(--header);
  color: #f7e7cf;
  align-items: center;
  gap: 20px;
}

.Library {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  padding: 20px;
  width: 100%;
  gap: 30px;
}
.card {
  height: 460px;
  width: 280px;
  background-color: var(--card-background);
  /* background-color: #edf2f4; */
  border-radius: 16px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-around;

  transition: transform 0.2s;
}
.card:hover {
  transform: translateY(-5px);
}
.book-details p {
  margin: 6px 0;
  font-size: 14px;
  color: #48361d;
  text-align: center;
}
.btn {
  display: flex;
  gap: 10px;
  justify-content: center;
  gap: 12px;
  margin-top: auto;
}
.read-btn,
.delete-btn {
  padding: 6px 16px;
  font-size: 14px;
  border: none;
  border-radius: 8px;
  cursor: pointer;
  transition: 0.2s;
}
.read-btn {
  background: var(--button-confirm);
  color: white;
}
.read-btn:hover {
  background-color: var(--button-confirm-hover);
}
.delete-btn {
  background: transparent;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  padding: 0;
  border-radius: 50px;
  padding-top: 2px;
  padding-right: 2px;
}
.material-symbols-outlined {
  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
  color: #7e776e;
  border-radius: 50px;
}
.material-symbols-outlined:hover {
  background-color: #46443d;
}

#addBook {
  width: 100%;
  height: 100%;
  padding: 0;
  background-color: transparent;
  border: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: 1.2rem;
  cursor: pointer;
  color: #48361d;
  font-weight: 700;
  font-size: 1.5rem;
}
.mdi-plus {
  font-weight: 700;
  font-size: 3rem;
}
.book-details {
  flex-grow: 1;
  margin-top: 0;
  text-align: center;
}

.book-img {
  width: 100%;
  height: 180px;
  object-fit: cover;
  border-radius: 12px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
}

.title-text {
  font-weight: bold;
  font-size: 16px;
  color: #222;
}

.header-logo {
  width: 80px;
  height: 80px;
}

#dialog:open {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100vw;
  height: 100vh;
  background-color: transparent;
  transform: scaleY(1);
  border: none;
}
#dialog::backdrop {
  backdrop-filter: blur(3px);
  background: rgba(0, 0, 0, 0.2);
}

#dialog form {
  gap: 18px;
  width: 500px;
  background-color: var(--card-background);
  padding: 40px;
  border: 1px solid black;
  border-radius: 20px;
}

#dialog form p {
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 6px;
}

.form-input {
  width: 100%;
  height: 40px;
  padding: 6px 10px;
  font-size: 16px;
  border-radius: 6px;
  border: 1px solid #ccc;
  box-sizing: border-box;
}

#confirmBtn {
  width: 100%;
  margin-top: 10px;
}

label {
  font-weight: 700;
}

/* Switch styling */

.switch-container {
  display: flex;
  align-items: center;
  gap: 12px;
}

.toggle-switch {
  position: relative;
  display: inline-block;
  width: 46px;
  height: 24px;
}

.toggle-switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  transition: 0.3s;
  border-radius: 34px;
}

.slider:before {
  content: "";
  position: absolute;
  height: 18px;
  width: 18px;
  left: 3px;
  bottom: 3px;
  background-color: white;
  transition: 0.3s;
  border-radius: 50%;
}

/* Checked style */
.toggle-switch input:checked + .slider {
  background-color: var(--button-confirm);
}

.toggle-switch input:checked + .slider:before {
  transform: translateX(22px);
}

